--- a/config/Makefile
+++ b/config/Makefile
@@ -1,4 +1,4 @@
-# Copyright (c) Huawei Technologies Co., Ltd. 2020-2020. All rights reserved.
+# Copyright (c) 2020 Huawei Device Co., Ltd. All rights reserved.
 
 include $(LITEOSTOPDIR)/../../drivers/hdf/lite/lite.mk
 
