feat: decouple hdf_config and hdf drivers
decouple hdf_config and hdf drivers

Signed-off-by: Caoruihong <crh.cao@huawei.com>
Change-Id: Ia1216d90e6f2d6407ca55f4b2949ac8b8578c367

--- a/sdk_liteos/BUILD.gn
+++ b/sdk_liteos/BUILD.gn
@@ -3,6 +3,7 @@
 group("sdk_liteos") {
   deps = [
     "board",
+    "config",
     "drivers",
     "mpp",
   ]
@@ -11,6 +12,7 @@ group("sdk_liteos") {
 config("public") {
   configs = [
     "board:public",
+    "config:public",
     "drivers:public",
     "mpp:public",
   ]
