fix: 内存映射关系与平台相关，故与内核解耦
close #I41P8Y

Signed-off-by: JerryH <huangjieliang@huawei.com>
Change-Id: I01833cf617bbc695543a865dbb994c6c22d4a0a8

--- a/sdk_liteos/board/BUILD.gn
+++ b/sdk_liteos/board/BUILD.gn
@@ -37,6 +37,9 @@ kernel_module(module_name) {
   } else {
     libs = [ "libs/release/libbsp_config.a" ]
   }
+  sources = [
+    "board.c",
+  ]
 }
 
 group("board") {
