--- a/sdk_liteos/config.gni
+++ b/sdk_liteos/config.gni
@@ -25,10 +25,10 @@ board_arch = ""
 
 # Toolchain name used for system compiling.
 # E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
-# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toochain.
+# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toolchain.
 board_toolchain = ""
 
-# The toolchain path instatlled, it's not mandatory if you have added toolchian path to your ~/.bashrc.
+# The toolchain path installed, it's not mandatory if you have added toolchain path to your ~/.bashrc.
 board_toolchain_path = ""
 
 # Compiler prefix.
@@ -38,13 +38,18 @@ board_toolchain_prefix = ""
 board_toolchain_type = "clang"
 
 # Board related common compile flags.
-board_cflags = [ "-mfloat-abi=softfp" ]
-board_cxx_flags = [ "-mfloat-abi=softfp" ]
+board_cflags = [
+  "-mfloat-abi=softfp",
+  "-mfpu=neon-vfpv4",
+]
+board_cxx_flags = [
+  "-mfloat-abi=softfp",
+  "-mfpu=neon-vfpv4",
+]
 board_ld_flags = []
 
 # Board related headfiles search path.
 board_include_dirs = []
-board_include_dirs += []
 
 # Board adapter dir for OHOS components.
 board_adapter_dir = ""
