--- a/sdk_liteos/config.gni
+++ b/sdk_liteos/config.gni
@@ -52,7 +52,7 @@ board_ld_flags = []
 board_include_dirs = []
 
 # Board adapter dir for OHOS components.
-board_adapter_dir = ""
+board_adapter_dir = "//device/hisilicon/hardware"
 
 # Sysroot path.
 board_configed_sysroot = ""
