chore: seperate mpp user shared libs from mpp kernel libs
Signed-off-by: Caoruihong <crh.cao@huawei.com>
Change-Id: Ie0ec0265fe8be504fa4c2a5464531885ce7e6a73

--- a/sdk_liteos/BUILD.gn
+++ b/sdk_liteos/BUILD.gn
@@ -7,7 +7,7 @@ group("sdk_liteos") {
   deps = [
     "board",
     "drivers",
-    "mpp",
+    "mpp/module_init",
   ]
   if (HAVE_PRODUCT_CONFIG) {
     deps += [ "$product_path/hdf_config" ]
@@ -20,6 +20,5 @@ config("public") {
   configs = [
     "board:public",
     "drivers:public",
-    "mpp:public",
   ]
 }
