--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1,4 +1,8 @@
 # Copyright (C) 2020 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.
 
 group("hispark_aries") {
+  deps = []
+  if (ohos_kernel_type == "liteos_a") {
+    deps += [ "sdk_liteos/mpp:copy_mpp_libs" ]
+  }
 }
